update config file

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: _default
-title: {{ metainfo.pageTitle }}
-description: {{ metainfo.pageDescription }}
+title: {{ title }}
+description: {{ description }}
 path: home
 ---
 
