--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: _default
-title: {{ title }}
-description: {{ description }}
+<!-- title: {{ title }}
+description: {{ description }} -->
 path: home
 ---
 
