update config file

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: _default
-title: {{ title }}
-description: {{ description }}
+title: {{ _default.title }}
+description: {{ _default.description }}
 path: home
 ---
 
