update config file

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: _default
-title: {{ frontpage.title }}
-description: {{ frontpage.description }}
+title: frontpage.title
+description: frontpage.description
 path: home
 ---
 
