--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ path: home
 
 {% if frontpage.topsection %}
 <div class="mx-auto justify-center items-center">
-    <div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('{{ frontpage.topsection.image }}')">
+    <div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('{{ frontpage.topsection.image }}')" alt="{{ frontpage.topsection.alt }}">
         <div class="mw7 center ph3">
         <div class="db mb3">
             <div class="mw7 relative bg-fix-primary mb3">
